maybe fixed background on mobile

--- a/css/website.css
+++ b/css/website.css
@@ -23,8 +23,8 @@
 }
 
 html {				
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	font-family: "Baloo Bhaina 2"; 
 	font-size: 1.3vmin;
 	-webkit-touch-callout: none !important; /* iOS Safari */
@@ -38,6 +38,7 @@ html {
 body {
 	margin: 0;
 	width: 100%;
+	height: 100%;
 	position: fixed;
 	overflow: hidden;	
 	overscroll-behavior-y: none;
@@ -49,7 +50,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 	background-image: url("../images/LakeAndMountains.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
